--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4974,7 +4974,7 @@ input[type=button].btn-block {
 .card {
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   min-width: 0;
   word-wrap: break-word;
   background-color: #fff;
